updated all of html as basic look

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <meta name="author" content="Mako Starykovs'ky">
-        <meta name="description" content="Alarm application">
+        <meta name="description" content="Shape factory project">
         <meta name="keywords" content="HTML, CSS, SE0, web, web development">
         <link rel="shortcut icon" href="assets/img/favicon.png?v=2" type="image/x-icon">
         <link rel="stylesheet" href="assets/index.css" media="screen">
@@ -18,10 +18,13 @@
             <div class="wrapper">
                 <div class="container">
                     <h2>Shape Factory</h2>
-                    <select name="shape" id="shape">
+                    <select name="shape" class="shape">
                         <option value="circle">Circle</option>
                         <option value="square">Square</option>
                     </select>
+                    <input type="button" class="create">Create
+                    <div class="container"></div>
+                    <h1 class="info"></h1>
                 </div>
             </div>
         </main>
